# cpp_electricity

./: CMakeLists.txt  README.md  Vec.cpp  Vec.h  constants.h  fakeCmake.txt  field.h  fields.cpp  fields.h  modeling.cpp  object.cpp  object.h  parse.cpp  parse.h  point.cpp  point.h  project.cpp  project.h  visual.cpp  visual.h
